--- a/build.xml
+++ b/build.xml
@@ -102,8 +102,8 @@ Drush Make and Simpletest support has been sponsored by [DBC](http://www.dbc.dk/
 
 <project name="phing-drupal" default="build"  phingVersion="2.6.1"> 
 
-  <property file="build/properties/project.prop"/>
-  <property file="build/properties/db.prop"/>
+  <property file="{project.dir.properties}/project.prop"/>
+  <property file="${project.dir.properties}/db.prop"/>
 
   <taskdef name="drush" classpath="build" classname="DrushTask"/>
 
@@ -118,21 +118,94 @@ This is the default build target.
 
 Do not run `docs` for now. Generating documentation eats up memory and build
 time and is largely obsolete when using GitHub. -->
-  <target name="build" depends="init">
-    <echo>Cool!</echo>
+  <target name="build" depends="init,
+                                install">
+    <echo>The end!</echo>
   </target>  
 
-  <target name="install" depends="db_drop, db_create, db_restore, drupal_setting_file" description="Install site">
-    <echo>Project installation started</echo>
+  <target name="init">
+    <!-- <phingcall target="code_check" />    -->
+  </target>
 
+   
+
+  <target name="install" depends="db_jobs, 
+                                  drupal_settings" description="Install site">
+    <echo>Project installation started</echo>
     <phingcall target="simpletest_enable"/>
     <phingcall target="simpletest_comment"/>
     <echo>Project installation finished</echo>
   </target>
 
-  <target name="init">
-    <phingcall target="code_check" />   
+  <target name="db_jobs" depends="db_drop, db_create, db_restore">
+    <echo>Project database is ready.</echo>
+  </target> 
+
+  <target name="db_create">
+    <echo>Create project database</echo>
+    <pdo url="${db.mysql.driver}:host=${db.mysql.host}" 
+         userId="${db.mysql.user}" 
+         password="${db.mysql.password}" 
+         onerror="abort">
+      CREATE DATABASE `${db.mysql.name}`;
+    </pdo>
+  </target>
+  
+  <target name="db_drop">
+    <echo>Drop project database</echo>
+    <pdo url="${db.mysql.driver}:host=${db.mysql.host}" 
+         userId="${db.mysql.user}" 
+         password="${db.mysql.password}" 
+         onerror="abort">
+      DROP DATABASE IF EXISTS `${db.mysql.name}`;
+    </pdo>
+  </target> 
+
+  <target name="db_restore">
+    <echo>Restore project database</echo>
+    <pdo url="${db.mysql.driver}:host=${db.mysql.host};dbname=${db.mysql.name}" 
+         encoding="utf8"
+         userId="${db.mysql.user}" 
+         password="${db.mysql.password}"
+         onerror="abort">
+      <fileset dir="${project.dir.backup}">
+        <include name="*.sql"/>
+      </fileset>
+    </pdo>
   </target>  
+
+  <target name="drupal_settings" depends="drupal_settings_clean, 
+                                          drupal_settings_copy" description="Create drupal settings file">
+    <echo>Project configure finished</echo>      
+  </target>  
+
+  <target name="drupal_settings_clean" description="Delete settings file if it is existing">
+    <if>
+      <available file="${project.drupal.settings.path}/${project.drupal.settings.file}" />
+      <then>
+        <chmod file="${project.drupal.settings.path}" mode="0777" />
+        <delete file="${project.drupal.settings.path}/${project.drupal.settings.file}" quiet='true' />
+        <echo>Delete settings.php file</echo>
+      </then>
+    </if>
+  </target>
+
+  <target name="drupal_settings_copy" description="Copy settings file if it is existing">
+    <echo>Copy settings.php file</echo>
+    <copy file="${project.dir.files}/${project.drupal.settings.file}" 
+          tofile="${project.drupal.settings.path}/${project.drupal.settings.file}">
+      <echo>Put project settings</echo>
+      <filterchain>
+        <replacetokens begintoken="%%" endtoken="%%">
+          <!-- MySQL TOKENS -->
+          <token key="db_name" value="${db.mysql.name}" />
+          <token key="db_username" value="${db.mysqluser}" />
+          <token key="db_password" value="${db.mysql.password}" />
+          <token key="host" value="${db.mysql.host}" />
+        </replacetokens>
+      </filterchain>
+    </copy>
+  </target>
 
   <target name="code_check" description="Check codes">
     <fileset dir="sites/all/modules" id="phpfiles">
@@ -154,59 +227,6 @@ time and is largely obsolete when using GitHub. -->
       <arg line="--extensions=php,inc" />
       <arg value="sites/all/modules" />
     </exec>
-  </target>
-
-  <target name="db_create">
-    <echo>Create project database</echo>
-    <pdo url="${db.mysql.driver}:host=${db.mysql.host}" userId="${db.mysql.user}" password="${db.mysql.password}" onerror="abort">
-      CREATE DATABASE `${db.mysql.name}`;
-    </pdo>
-  </target>
-  
-  <target name="db_drop">
-    <echo>Drop project database</echo>
-    <pdo url="${db.mysql.driver}:host=${db.mysql.host}" userId="${db.mysql.user}" password="${db.mysql.password}" onerror="abort">
-      DROP DATABASE IF EXISTS `${db.mysql.name}`;
-    </pdo>
-  </target> 
-
-  <target name="db_restore">
-    <pdo url="${db.mysql.driver}:host=${db.mysql.host};dbname=${db.mysql.name}" encoding="utf8"
-            userId="${db.mysql.user}" password="${db.mysql.password}"
-            onerror="abort">
-            <fileset dir="backup">
-                <include name="*.sql"/>
-            </fileset>
-       </pdo>
-  </target>  
-
-  <target name="drupal_setting_file" depends="drupal_settings_clean, drupal_settings_copy" description="Create drupal settings file">
-    <echo>Copy settings.php file</echo>      
-  </target>  
-
-  <target name="drupal_settings_clean" description="Delete settings file if exist">
-    <if>
-      <available file="${project.drupal.settings.path}${project.drupal.settings.file}" />
-      <then>
-        <chmod file="${project.drupal.settings.path}" mode="0777" />
-        <delete file="${project.drupal.settings.path}${project.drupal.settings.file}" quiet='true' />
-        <echo>Delete settings.php file</echo>
-      </then>
-    </if>
-  </target>
-
-  <target name="drupal_settings_copy" description="Copy settings file if exist">
-    <copy file="build/files/${project.drupal.settings.file}" tofile="${project.drupal.settings.path}${project.drupal.settings.file}">
-      <filterchain>
-        <replacetokens begintoken="%%" endtoken="%%">
-          <!-- MySQL TOKENS -->
-          <token key="db_name" value="${db.mysql.name}" />
-          <token key="db_username" value="${db.mysqluser}" />
-          <token key="db_password" value="${db.mysql.password}" />
-          <token key="host" value="${db.mysql.host}" />
-        </replacetokens>
-      </filterchain>
-    </copy>
   </target>
 
   <target name="simpletest_enable" description="Install drake migration">
