--- a/build.xml
+++ b/build.xml
@@ -119,31 +119,29 @@ This is the default build target.
 Do not run `docs` for now. Generating documentation eats up memory and build
 time and is largely obsolete when using GitHub. -->
   <target name="build" depends="init,
-                                install">
-    <echo>The end!</echo>
+                                install,
+                                check_codestyle,
+                                simpletest">
+    <echo msg="The end"></echo>
   </target>  
 
   <target name="init">
-    <echo>Starting the project build</echo>
-    <!-- <phingcall target="code_check" />    -->
+    <echo msg="Starting the project build"></echo>
   </target>
 
    
 
   <target name="install" depends="db_jobs, 
                                   drupal_settings" description="Install site">
-    <echo>Project installation started</echo>
-    <phingcall target="simpletest_enable"/>
-    <phingcall target="simpletest_comment"/>
-    <echo>Project installation finished</echo>
+    <echo msg="Project installation started">
   </target>
 
   <target name="db_jobs" depends="db_drop, db_create, db_restore">
-    <echo>Project database is ready.</echo>
+    <echo msg="Project database is ready.">
   </target> 
 
   <target name="db_create">
-    <echo>Create project database</echo>
+    <echo msg="Create project database">
     <pdo url="${db.mysql.driver}:host=${db.mysql.host}" 
          userId="${db.mysql.user}" 
          password="${db.mysql.password}" 
@@ -153,7 +151,7 @@ time and is largely obsolete when using GitHub. -->
   </target>
   
   <target name="db_drop">
-    <echo>Drop project database</echo>
+    <echo msg="Drop project database">
     <pdo url="${db.mysql.driver}:host=${db.mysql.host}" 
          userId="${db.mysql.user}" 
          password="${db.mysql.password}" 
@@ -163,7 +161,7 @@ time and is largely obsolete when using GitHub. -->
   </target> 
 
   <target name="db_restore">
-    <echo>Restore project database</echo>
+    <echo msg="Restore project database">
     <pdo url="${db.mysql.driver}:host=${db.mysql.host};dbname=${db.mysql.name}" 
          encoding="utf8"
          userId="${db.mysql.user}" 
@@ -177,7 +175,7 @@ time and is largely obsolete when using GitHub. -->
 
   <target name="drupal_settings" depends="drupal_settings_clean, 
                                           drupal_settings_copy" description="Create drupal settings file">
-    <echo>Project configure finished</echo>      
+    <echo msg="Project configure finished">      
   </target>  
 
   <target name="drupal_settings_clean" description="Delete settings file if it is existing">
@@ -186,13 +184,13 @@ time and is largely obsolete when using GitHub. -->
       <then>
         <chmod file="${project.drupal.settings.path}" mode="0777" />
         <delete file="${project.drupal.settings.path}/${project.drupal.settings.file}" quiet='true' />
-        <echo>Delete settings.php file</echo>
+        <echo msg="Delete settings.php file">
       </then>
     </if>
   </target>
 
   <target name="drupal_settings_copy" description="Copy settings file if it is existing">
-    <echo>Copy settings.php file</echo>
+    <echo msg="Copy settings.php file" />
     <copy file="${project.dir.files}/${project.drupal.settings.file}" 
           tofile="${project.drupal.settings.path}/${project.drupal.settings.file}">
       <filterchain>
@@ -207,19 +205,13 @@ time and is largely obsolete when using GitHub. -->
     </copy>
   </target>
 
-  <target name="code_check" description="Check codes">
-    <fileset dir="sites/all/modules" id="phpfiles">
-      <include name="*.php" />
-    </fileset>  
-    <phplint haltonfailure="true">
-      <fileset refid="phpfiles" />
-    </phplint> 
+  <target name="check_codestyle" description="Check codestyle">
+    <echo msg="Remove checkstyle report file" />
+    <exec command="rm checkstyle.xml" dir="${project.dir.reports}" />
     <phingcall target="phpcs" />  
   </target>  
 
   <target name="phpcs"> 
-    <exec command="rm checkstyle.xml" dir="build/reports" />
-    <echo msg="File cleaned" />
     <exec executable="phpcs">
       <arg line="--report=checkstyle" />
       <arg line="--report-file=build/reports/checkstyle.xml" />
@@ -229,24 +221,30 @@ time and is largely obsolete when using GitHub. -->
     </exec>
   </target>
 
+  <target name="simpletest">
+    <phingcall target="simpletest_enable" />
+    <phingcall target="simpletest_comment" />
+  </target>  
+
   <target name="simpletest_enable" description="Install drake migration">
     <drush command="pm-enable" assume="yes">
       <param>simpletest</param>
     </drush>
-    <phingcall target="cc"/>
+    <phingcall target="cc" />
   </target>
 
-  <target name="cc" description="Clear cache">
-    <drush command="cc">
-      <param>all</param>
-    </drush>     
-  </target>  
-
-  <target name="simpletest_comment" description="Run simpletest">
+  <target name="simpletest_comment" description="Run test of comment module">
+    <echo msg="Run Test" />
     <drush command="test-run">
       <param>Comment</param>
     </drush>     
-    <echo>Run Test</echo>
+  </target>  
+
+  <target name="cc" description="Clear cache">
+    <echo msg="Clear all caches" />
+    <drush command="cc">
+      <param>all</param>
+    </drush>     
   </target>  
 
 </project>
